[v0.9.184] Fixed zip in a zip.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -188,16 +188,10 @@ jobs:
           FILENAME="Advancely-v${{ env.PROJECT_VERSION }}-${SUFFIX}.zip"
           echo "FILENAME=$FILENAME" >> $GITHUB_ENV
 
-#      - name: Create ZIP Archive
-#        shell: bash
-#        run: |
-#          # Use the filename from the previous step to create the zip
-#          zip -r ${{ env.FILENAME }} release
-
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v4
         with:
           # The artifact will be named with the final, correct filename
           name: ${{ env.FILENAME }}
-          # The path points to the zip file we just created
-          path: ${{ env.FILENAME }}
+          # Release it as artifact
+          path: release/
